cli/tests/testdata/error_021_stack_method.ts
class A {
  m(): never {
    throw new Error("method");
  }
}

try {
  new A().m();
} catch (error) {
  console.log(error.stack);
  throw error;
}
